--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,33 @@
 /* Whole document: */
 body{
-  font-family: Helvetica;
+  font-family: Times New Roman;
   font-size: 12pt;
 }
 
 h1 {
-  font-size: 12pt;
+  font-size: 14pt;
+  font-style: bold;
 }
 h1.title {
-  font-size: 10pt;
+  font-size: 12pt;
+  font-style: bold;
 }
 h2 {
-  font-size: 10pt;
+  font-size: 12pt;
 }
 h3 {
-  font-size: 10pt;
+  font-size: 12pt;
   font-style: italic;
   font-weight: 100;
 }
 h4 {
-  font-size: 10pt;
+  font-size: 12pt;
 }
 h5 {
-  font-size: 10pt;
+  font-size: 12pt;
 }
 h6 {
-  font-size: 10pt;
+  font-size: 12pt;
 }
 img {
     display: block;
