--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 /* Whole document: */
 body{
-  font-family: Times New Roman;
+  font-family: Helvetica;
   font-size: 12pt;
+  font-weight: 525;
 }
 
 h1 {
